# AIE7

01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md
02_Embeddings_and_RAG/: .gitignore  ASSIGNMENT_ANSWERS.md  Embedding_Primer.ipynb  NOTES.md  Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: pdf_utils.py  rag_pipeline.py  text_utils.py  vectordatabase.py
02_Embeddings_and_RAG/tests/: test_rag_system.py
04_Production_RAG/: ACTIVITIES_QUESTIONS.md  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  README.md  pyproject.toml  requirements.txt
06_Multi_Agent_with_LangGraph/app/: main.py
07_Synthetic_Data_Generation_and_LangSmith/: Bonus_Activity.ipynb  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  evol_instruct_evaluation_20250716_212342.json  langgraph_synthetic_data.json  linkedin.txt  requirements.txt
07_Synthetic_Data_Generation_and_LangSmith/api/: main.py  (+1 more)
08_Evaluating_RAG_With_Ragas/: Advanced_Build.ipynb  Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  pyproject.toml
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
10_Open_DeepResearch/: GIT_LARGE_FILES_CLEANUP_TUTORIAL.md  open-deep-research.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb
(+15 files in other folders)
