[project]
name = "09-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "cohere>=5.12.0,<5.13.0", 
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "ragas>=0.2.0",
    "datasets>=2.14.0",
    "langsmith>=0.1.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "pillow>=11.1.0",
    "langchain-community>=0.3.19",
    "pymupdf>=1.24.1",
    "rapidfuzz>=3.1.0"
]
